# born2smile-website

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  DESIGN.md  GEO-AUDIT-REPORT.md  PLAN.md  README.md  apphosting.yaml  firebase.json  firestore.indexes.json  firestore.rules  instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  proxy.ts  sentry-options.ts  sentry.server.config.ts  vercel.json
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
docs/: GEO-AUDIT-REPORT.md  GEO-SCHEMA-REPORT.md  admin-ux-checklist.md  blog-draft-pack-2026-04.md  blog-workflow.md  blog-writing-guide.md  content-coverage-retrieval-evaluation.md  environment-variables.md  external-api-integration-ideas.md  firestore-architecture.md  homepage-improvement-ideas.md  llm-gateway-cloudflare-setup.md  opportunity-scoring.md  project-handoff-checklist.md  source-link-policy.md  supabase-architecture.md  todo.md
hooks/: useAdminAuth.ts  useModalA11y.ts  usePublishPopup.ts
hosting-redirect/: index.html
lib/: admin-ai-ops-jobs.ts  admin-ai-ops-types.ts  admin-ai-ops.ts  admin-ai-write-logs.ts  admin-analytics.ts  admin-auth.ts  date.ts  (+47 more)
services/ai-ops-agent/: Cargo.toml  README.md
services/ai-ops-agent/src/: app.rs  bridge.rs  config.rs  main.rs  models.rs
services/ai-ops-agent/src/routes/: activity.rs  briefing.rs  healthz.rs  mod.rs  opportunities.rs  outcomes.rs  playbooks.rs  suggestion_jobs.rs  suggestions.rs  targets.rs
(+524 files in other folders)
